# dynamic-island

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-icons.mjs  icon.icns
src-tauri/packaging/: AppxManifest.xml  build-msix.ps1  make-dev-cert.ps1
src-tauri/src/: identity.rs  lib.rs  main.rs  notification_listener.rs  notifications.rs  window_setup.rs
src/components/: DynamicIsland.tsx  IdlePill.tsx  NotificationList.tsx  NotificationView.tsx
src/hooks/: useNotifications.ts
src/lib/: sound.ts  tauri.ts  types.ts
src/store/: islandStore.ts
