[package]
name = "dynamic-island"
version = "0.1.0"
description = "桌面灵动岛 - Hook Windows 通知"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "dynamic_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
once_cell = "1"

# Windows-only: WinRT notification listener (requires package identity at runtime).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
